--- a/packaging/ubuntu-16.04/changelog
+++ b/packaging/ubuntu-16.04/changelog
@@ -1,3 +1,10 @@
+snapd (2.48.1) xenial; urgency=medium
+
+  * New upstream release, LP: #1906690
+    - gadget: disable ubuntu-boot role validation check
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 03 Dec 2020 17:43:30 +0100
+
 snapd (2.48) xenial; urgency=medium
 
   * New upstream release, LP: #1904098
