--- a/packaging/ubuntu-16.04/changelog
+++ b/packaging/ubuntu-16.04/changelog
@@ -1,3 +1,9 @@
+snapd (2.48.2) UNRELEASED; urgency=medium
+
+  * placeholder changelog
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Dec 2020 21:14:44 +0100
+
 snapd (2.48) xenial; urgency=medium
 
   * New upstream release, LP: #1904098
